parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    AUTO
    ENUM
    EXIT
    EXTERN
    IMPRIMIR
    LABEL
    MIENTRAS
    NUMERO
    PILAPOS
    PILAPUNTERO
    PTEMPORAL
    READ
    REGISTER
    TEMPORAL
    UNSET
    VALORDEVUELTO

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> definicion_instr
Rule 5     instruccion -> imprimir_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> STRUCTDEF
Rule 8     instruccion -> FUNCION
Rule 9     instruccion -> FUNCMAIN
Rule 10    instruccion -> INCREMENTO PTCOMA
Rule 11    instruccion -> STRUCTDECLA
Rule 12    instruccion -> ASIGNA_STRUCT
Rule 13    FUNCMAIN -> INT MAIN PARIZQ PARDER BLOQUE
Rule 14    DEFINEL -> ID DOSP
Rule 15    DEFINEGOTO -> GOTO ID PTCOMA
Rule 16    imprimir_instr -> PRINT PARIZQ LISTA_PRINT PARDER PTCOMA
Rule 17    LISTA_PRINT -> LISTA_PRINT COMA expresion_log_relacional
Rule 18    LISTA_PRINT -> expresion_log_relacional
Rule 19    definicion_instr -> TIPO_VAR LISTAID PTCOMA
Rule 20    LISTAID -> LISTAID COMA IDDECLA
Rule 21    LISTAID -> IDDECLA
Rule 22    IDDECLA -> IDT
Rule 23    IDDECLA -> IDT IGUAL expresion_log_relacional
Rule 24    IDT -> ID
Rule 25    IDT -> ID LIND
Rule 26    LIND -> LIND IND
Rule 27    LIND -> IND
Rule 28    IND -> CORIZQ CORDER
Rule 29    IND -> CORIZQ expresion_log_relacional CORDER
Rule 30    STRUCTDEF -> STRUCT ID LLAVIZQ IDSTRUCT LLAVDER PTCOMA
Rule 31    IDSTRUCT -> IDSTRUCT ELESTRUCT
Rule 32    IDSTRUCT -> ELESTRUCT
Rule 33    ELESTRUCT -> TIPO_VAR ID PTCOMA
Rule 34    STRUCTDECLA -> STRUCT ID ID PTCOMA
Rule 35    TIPO_VAR -> INT
Rule 36    TIPO_VAR -> DOUBLE
Rule 37    TIPO_VAR -> FLOAT
Rule 38    TIPO_VAR -> CHAR
Rule 39    TIPO_VAR -> VOID
Rule 40    asignacion_instr -> IDT TIPO_AS expresion_log_relacional PTCOMA
Rule 41    ASIGNA_STRUCT -> ID PUNTO ID IGUAL expresion_log_relacional PTCOMA
Rule 42    TIPO_AS -> IGUAL
Rule 43    TIPO_AS -> MASIGUAL
Rule 44    TIPO_AS -> MENOSIGUAL
Rule 45    TIPO_AS -> PORIGUAL
Rule 46    TIPO_AS -> DIVIGUAL
Rule 47    TIPO_AS -> RESIGUAL
Rule 48    TIPO_AS -> IZQIGUAL
Rule 49    TIPO_AS -> DERIGUAL
Rule 50    TIPO_AS -> ANDIGUAL
Rule 51    TIPO_AS -> NOTIGUAL
Rule 52    TIPO_AS -> ORIGUAL
Rule 53    FUNCION -> TIPO_VAR ID PARIZQ PARAMETROS PARDER BLOQUE
Rule 54    PARAMETROS -> PARAMETROS COMA PARAMETRO
Rule 55    PARAMETROS -> PARAMETRO
Rule 56    PARAMETRO -> TIPO_VAR ID
Rule 57    PARAMETRO -> <empty>
Rule 58    BLOQUE -> LLAVIZQ SENTENCIAS LLAVDER
Rule 59    BLOQUE -> SENTENCIAS
Rule 60    SENTENCIAS -> SENTENCIAS SENTENCIA
Rule 61    SENTENCIAS -> SENTENCIA
Rule 62    SENTENCIA -> definicion_instr
Rule 63    SENTENCIA -> asignacion_instr
Rule 64    SENTENCIA -> imprimir_instr
Rule 65    SENTENCIA -> DEFINEL
Rule 66    SENTENCIA -> DEFINEGOTO
Rule 67    SENTENCIA -> IFFUN
Rule 68    SENTENCIA -> SWITCHFUN
Rule 69    SENTENCIA -> BREAKF
Rule 70    SENTENCIA -> CONTINUEF
Rule 71    SENTENCIA -> RETURNF
Rule 72    SENTENCIA -> WHILEF
Rule 73    SENTENCIA -> DOFUN
Rule 74    SENTENCIA -> FORF
Rule 75    SENTENCIA -> LLAMADA PTCOMA
Rule 76    SENTENCIA -> INCREMENTO PTCOMA
Rule 77    SENTENCIA -> STRUCTDECLA
Rule 78    SENTENCIA -> ASIGNA_STRUCT
Rule 79    LLAMADA -> ID PARIZQ PARAM_LLAMADA PARDER
Rule 80    PARAM_LLAMADA -> PARAM_LLAMADA COMA PARAM
Rule 81    PARAM_LLAMADA -> PARAM
Rule 82    PARAM -> expresion_log_relacional
Rule 83    PARAM -> <empty>
Rule 84    FORF -> FOR PARIZQ SENTENCIA expresion_log_relacional PTCOMA INCREMENTO PARDER BLOQUE
Rule 85    DOFUN -> DO LLAVIZQ SENTENCIAS LLAVDER WHILE expresion_numerica PTCOMA
Rule 86    WHILEF -> WHILE expresion_log_relacional LLAVIZQ SENTENCIAS LLAVDER
Rule 87    SWITCHFUN -> SWITCH expresion_numerica LLAVIZQ LISTACASE LLAVDER
Rule 88    LISTACASE -> LISTACASE CASES
Rule 89    LISTACASE -> CASES
Rule 90    CASES -> CASE expresion_log_relacional DOSP SENTENCIAS
Rule 91    CASES -> DEFAULT DOSP SENTENCIAS
Rule 92    BREAKF -> BREAK PTCOMA
Rule 93    CONTINUEF -> CONTINUE PTCOMA
Rule 94    RETURNF -> RETURN expresion_log_relacional PTCOMA
Rule 95    RETURNF -> RETURN PTCOMA
Rule 96    IFFUN -> if_instr
Rule 97    IFFUN -> if_instr LISTA_ELSEIF
Rule 98    IFFUN -> if_instr LISTA_ELSEIF else_instr
Rule 99    IFFUN -> if_instr else_instr
Rule 100   if_instr -> IF expresion_log_relacional BLOQUE
Rule 101   LISTA_ELSEIF -> LISTA_ELSEIF if_else_instr
Rule 102   LISTA_ELSEIF -> if_else_instr
Rule 103   if_else_instr -> ELSE if_instr
Rule 104   else_instr -> ELSE BLOQUE
Rule 105   expresion_numerica -> expresion_log_relacional MAS expresion_log_relacional
Rule 106   expresion_numerica -> expresion_log_relacional MENOS expresion_log_relacional
Rule 107   expresion_numerica -> expresion_log_relacional POR expresion_log_relacional
Rule 108   expresion_numerica -> expresion_log_relacional DIVIDIDO expresion_log_relacional
Rule 109   expresion_numerica -> expresion_log_relacional RES expresion_log_relacional
Rule 110   expresion_numerica -> expresion_log_relacional ANDBIT expresion_log_relacional
Rule 111   expresion_numerica -> expresion_log_relacional ORBIT expresion_log_relacional
Rule 112   expresion_numerica -> expresion_log_relacional XORBIT expresion_log_relacional
Rule 113   expresion_numerica -> expresion_log_relacional IZQBIT expresion_log_relacional
Rule 114   expresion_numerica -> expresion_log_relacional DERBIT expresion_log_relacional
Rule 115   expresion_numerica -> NOTBIT expresion_log_relacional
Rule 116   expresion_numerica -> MENOS expresion_log_relacional
Rule 117   expresion_numerica -> PARIZQ expresion_log_relacional PARDER
Rule 118   expresion_numerica -> ENTERO
Rule 119   expresion_numerica -> DECIMAL
Rule 120   expresion_numerica -> ID
Rule 121   expresion_numerica -> CADENA
Rule 122   expresion_numerica -> CADE
Rule 123   expresion_numerica -> expresion_log_relacional INTERRO expresion_log_relacional DOSP expresion_log_relacional
Rule 124   expresion_numerica -> SIZEOF expresion_log_relacional
Rule 125   INCREMENTO -> MASMAS ID
Rule 126   INCREMENTO -> MENOSMENOS ID
Rule 127   INCREMENTO -> ID MASMAS
Rule 128   INCREMENTO -> ID MENOSMENOS
Rule 129   expresion_numerica -> LLAMADA
Rule 130   expresion_numerica -> ID PUNTO ID
Rule 131   expresion_numerica -> ANDBIT ID
Rule 132   expresion_numerica -> TIPOCONVERSION expresion_log_relacional
Rule 133   expresion_numerica -> IDT
Rule 134   expresion_numerica -> LLAVIZQ LISTA_VALORES_ARREGLO LLAVDER
Rule 135   LISTA_VALORES_ARREGLO -> LISTA_VALORES_ARREGLO COMA expresion_log_relacional
Rule 136   expresion_numerica -> SCAN PARIZQ PARDER
Rule 137   LISTA_VALORES_ARREGLO -> expresion_log_relacional
Rule 138   TIPOCONVERSION -> PARIZQ INT PARDER
Rule 139   TIPOCONVERSION -> PARIZQ FLOAT PARDER
Rule 140   TIPOCONVERSION -> PARIZQ CHAR PARDER
Rule 141   expresion_numerica -> ABS PARIZQ expresion_numerica PARDER
Rule 142   expresion_log_relacional -> expresion_log_relacional MAYQUE expresion_log_relacional
Rule 143   expresion_log_relacional -> expresion_log_relacional MENQUE expresion_log_relacional
Rule 144   expresion_log_relacional -> expresion_log_relacional IGUALQUE expresion_log_relacional
Rule 145   expresion_log_relacional -> expresion_log_relacional NIGUALQUE expresion_log_relacional
Rule 146   expresion_log_relacional -> expresion_log_relacional MAYORIG expresion_log_relacional
Rule 147   expresion_log_relacional -> expresion_log_relacional MENORIG expresion_log_relacional
Rule 148   expresion_log_relacional -> expresion_log_relacional ANDLOG expresion_log_relacional
Rule 149   expresion_log_relacional -> expresion_log_relacional ORLOG expresion_log_relacional
Rule 150   expresion_log_relacional -> expresion_log_relacional XORLOG expresion_log_relacional
Rule 151   expresion_log_relacional -> NOTLOG expresion_log_relacional
Rule 152   expresion_log_relacional -> expresion_numerica

Terminals, with rules where they appear

ABS                  : 141
ANDBIT               : 110 131
ANDIGUAL             : 50
ANDLOG               : 148
ARRAY                : 
AUTO                 : 
BREAK                : 92
CADE                 : 122
CADENA               : 121
CASE                 : 90
CHAR                 : 38 140
COMA                 : 17 20 54 80 135
CONTINUE             : 93
CORDER               : 28 29
CORIZQ               : 28 29
DECIMAL              : 119
DEFAULT              : 91
DERBIT               : 114
DERIGUAL             : 49
DIVIDIDO             : 108
DIVIGUAL             : 46
DO                   : 85
DOSP                 : 14 90 91 123
DOUBLE               : 36
ELSE                 : 103 104
ENTERO               : 118
ENUM                 : 
EXIT                 : 
EXTERN               : 
FLOAT                : 37 139
FOR                  : 84
GOTO                 : 15
ID                   : 14 15 24 25 30 33 34 34 41 41 53 56 79 120 125 126 127 128 130 130 131
IF                   : 100
IGUAL                : 23 41 42
IGUALQUE             : 144
IMPRIMIR             : 
INT                  : 13 35 138
INTERRO              : 123
IZQBIT               : 113
IZQIGUAL             : 48
LABEL                : 
LLAVDER              : 30 58 85 86 87 134
LLAVIZQ              : 30 58 85 86 87 134
MAIN                 : 13
MAS                  : 105
MASIGUAL             : 43
MASMAS               : 125 127
MAYORIG              : 146
MAYQUE               : 142
MENORIG              : 147
MENOS                : 106 116
MENOSIGUAL           : 44
MENOSMENOS           : 126 128
MENQUE               : 143
MIENTRAS             : 
NIGUALQUE            : 145
NOTBIT               : 115
NOTIGUAL             : 51
NOTLOG               : 151
NUMERO               : 
ORBIT                : 111
ORIGUAL              : 52
ORLOG                : 149
PARDER               : 13 16 53 79 84 117 136 138 139 140 141
PARIZQ               : 13 16 53 79 84 117 136 138 139 140 141
PILAPOS              : 
PILAPUNTERO          : 
POR                  : 107
PORIGUAL             : 45
PRINT                : 16
PTCOMA               : 10 15 16 19 30 33 34 40 41 75 76 84 85 92 93 94 95
PTEMPORAL            : 
PUNTO                : 41 130
READ                 : 
REGISTER             : 
RES                  : 109
RESIGUAL             : 47
RETURN               : 94 95
SCAN                 : 136
SIZEOF               : 124
STRUCT               : 30 34
SWITCH               : 87
TEMPORAL             : 
UNSET                : 
VALORDEVUELTO        : 
VOID                 : 39
WHILE                : 85 86
XORBIT               : 112
XORLOG               : 150
error                : 

Nonterminals, with rules where they appear

ASIGNA_STRUCT        : 12 78
BLOQUE               : 13 53 84 100 104
BREAKF               : 69
CASES                : 88 89
CONTINUEF            : 70
DEFINEGOTO           : 66
DEFINEL              : 65
DOFUN                : 73
ELESTRUCT            : 31 32
FORF                 : 74
FUNCION              : 8
FUNCMAIN             : 9
IDDECLA              : 20 21
IDSTRUCT             : 30 31
IDT                  : 22 23 40 133
IFFUN                : 67
INCREMENTO           : 10 76 84
IND                  : 26 27
LIND                 : 25 26
LISTACASE            : 87 88
LISTAID              : 19 20
LISTA_ELSEIF         : 97 98 101
LISTA_PRINT          : 16 17
LISTA_VALORES_ARREGLO : 134 135
LLAMADA              : 75 129
PARAM                : 80 81
PARAMETRO            : 54 55
PARAMETROS           : 53 54
PARAM_LLAMADA        : 79 80
RETURNF              : 71
SENTENCIA            : 60 61 84
SENTENCIAS           : 58 59 60 85 86 90 91
STRUCTDECLA          : 11 77
STRUCTDEF            : 7
SWITCHFUN            : 68
TIPOCONVERSION       : 132
TIPO_AS              : 40
TIPO_VAR             : 19 33 53 56
WHILEF               : 72
asignacion_instr     : 6 63
definicion_instr     : 4 62
else_instr           : 98 99
expresion_log_relacional : 17 18 23 29 40 41 82 84 86 90 94 100 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 116 117 123 123 123 124 132 135 137 142 142 143 143 144 144 145 145 146 146 147 147 148 148 149 149 150 150 151
expresion_numerica   : 85 87 141 152
if_else_instr        : 101 102
if_instr             : 96 97 98 99 103
imprimir_instr       : 5 64
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . definicion_instr
    (5) instruccion -> . imprimir_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . STRUCTDEF
    (8) instruccion -> . FUNCION
    (9) instruccion -> . FUNCMAIN
    (10) instruccion -> . INCREMENTO PTCOMA
    (11) instruccion -> . STRUCTDECLA
    (12) instruccion -> . ASIGNA_STRUCT
    (19) definicion_instr -> . TIPO_VAR LISTAID PTCOMA
    (16) imprimir_instr -> . PRINT PARIZQ LISTA_PRINT PARDER PTCOMA
    (40) asignacion_instr -> . IDT TIPO_AS expresion_log_relacional PTCOMA
    (30) STRUCTDEF -> . STRUCT ID LLAVIZQ IDSTRUCT LLAVDER PTCOMA
    (53) FUNCION -> . TIPO_VAR ID PARIZQ PARAMETROS PARDER BLOQUE
    (13) FUNCMAIN -> . INT MAIN PARIZQ PARDER BLOQUE
    (125) INCREMENTO -> . MASMAS ID
    (126) INCREMENTO -> . MENOSMENOS ID
    (127) INCREMENTO -> . ID MASMAS
    (128) INCREMENTO -> . ID MENOSMENOS
    (34) STRUCTDECLA -> . STRUCT ID ID PTCOMA
    (41) ASIGNA_STRUCT -> . ID PUNTO ID IGUAL expresion_log_relacional PTCOMA
    (35) TIPO_VAR -> . INT
    (36) TIPO_VAR -> . DOUBLE
    (37) TIPO_VAR -> . FLOAT
    (38) TIPO_VAR -> . CHAR
    (39) TIPO_VAR -> . VOID
    (24) IDT -> . ID
    (25) IDT -> . ID LIND

    PRINT           shift and go to state 14
    STRUCT          shift and go to state 16
    INT             shift and go to state 18
    MASMAS          shift and go to state 19
    MENOSMENOS      shift and go to state 20
    ID              shift and go to state 17
    DOUBLE          shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    VOID            shift and go to state 24

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    definicion_instr               shift and go to state 4
    imprimir_instr                 shift and go to state 5
    asignacion_instr               shift and go to state 6
    STRUCTDEF                      shift and go to state 7
    FUNCION                        shift and go to state 8
    FUNCMAIN                       shift and go to state 9
    INCREMENTO                     shift and go to state 10
    STRUCTDECLA                    shift and go to state 11
    ASIGNA_STRUCT                  shift and go to state 12
    TIPO_VAR                       shift and go to state 13
    IDT                            shift and go to state 15

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . definicion_instr
    (5) instruccion -> . imprimir_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . STRUCTDEF
    (8) instruccion -> . FUNCION
    (9) instruccion -> . FUNCMAIN
    (10) instruccion -> . INCREMENTO PTCOMA
    (11) instruccion -> . STRUCTDECLA
    (12) instruccion -> . ASIGNA_STRUCT
    (19) definicion_instr -> . TIPO_VAR LISTAID PTCOMA
    (16) imprimir_instr -> . PRINT PARIZQ LISTA_PRINT PARDER PTCOMA
    (40) asignacion_instr -> . IDT TIPO_AS expresion_log_relacional PTCOMA
    (30) STRUCTDEF -> . STRUCT ID LLAVIZQ IDSTRUCT LLAVDER PTCOMA
    (53) FUNCION -> . TIPO_VAR ID PARIZQ PARAMETROS PARDER BLOQUE
    (13) FUNCMAIN -> . INT MAIN PARIZQ PARDER BLOQUE
    (125) INCREMENTO -> . MASMAS ID
    (126) INCREMENTO -> . MENOSMENOS ID
    (127) INCREMENTO -> . ID MASMAS
    (128) INCREMENTO -> . ID MENOSMENOS
    (34) STRUCTDECLA -> . STRUCT ID ID PTCOMA
    (41) ASIGNA_STRUCT -> . ID PUNTO ID IGUAL expresion_log_relacional PTCOMA
    (35) TIPO_VAR -> . INT
    (36) TIPO_VAR -> . DOUBLE
    (37) TIPO_VAR -> . FLOAT
    (38) TIPO_VAR -> . CHAR
    (39) TIPO_VAR -> . VOID
    (24) IDT -> . ID
    (25) IDT -> . ID LIND

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINT           shift and go to state 14
    STRUCT          shift and go to state 16
    INT             shift and go to state 18
    MASMAS          shift and go to state 19
    MENOSMENOS      shift and go to state 20
    ID              shift and go to state 17
    DOUBLE          shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    VOID            shift and go to state 24

    instruccion                    shift and go to state 25
    definicion_instr               shift and go to state 4
    imprimir_instr                 shift and go to state 5
    asignacion_instr               shift and go to state 6
    STRUCTDEF                      shift and go to state 7
    FUNCION                        shift and go to state 8
    FUNCMAIN                       shift and go to state 9
    INCREMENTO                     shift and go to state 10
    STRUCTDECLA                    shift and go to state 11
    ASIGNA_STRUCT                  shift and go to state 12
    TIPO_VAR                       shift and go to state 13
    IDT                            shift and go to state 15

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    INT             reduce using rule 3 (instrucciones -> instruccion .)
    MASMAS          reduce using rule 3 (instrucciones -> instruccion .)
    MENOSMENOS      reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    DOUBLE          reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    CHAR            reduce using rule 3 (instrucciones -> instruccion .)
    VOID            reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> definicion_instr .

    PRINT           reduce using rule 4 (instruccion -> definicion_instr .)
    STRUCT          reduce using rule 4 (instruccion -> definicion_instr .)
    INT             reduce using rule 4 (instruccion -> definicion_instr .)
    MASMAS          reduce using rule 4 (instruccion -> definicion_instr .)
    MENOSMENOS      reduce using rule 4 (instruccion -> definicion_instr .)
    ID              reduce using rule 4 (instruccion -> definicion_instr .)
    DOUBLE          reduce using rule 4 (instruccion -> definicion_instr .)
    FLOAT           reduce using rule 4 (instruccion -> definicion_instr .)
    CHAR            reduce using rule 4 (instruccion -> definicion_instr .)
    VOID            reduce using rule 4 (instruccion -> definicion_instr .)
    $end            reduce using rule 4 (instruccion -> definicion_instr .)


state 5

    (5) instruccion -> imprimir_instr .

    PRINT           reduce using rule 5 (instruccion -> imprimir_instr .)
    STRUCT          reduce using rule 5 (instruccion -> imprimir_instr .)
    INT             reduce using rule 5 (instruccion -> imprimir_instr .)
    MASMAS          reduce using rule 5 (instruccion -> imprimir_instr .)
    MENOSMENOS      reduce using rule 5 (instruccion -> imprimir_instr .)
    ID              reduce using rule 5 (instruccion -> imprimir_instr .)
    DOUBLE          reduce using rule 5 (instruccion -> imprimir_instr .)
    FLOAT           reduce using rule 5 (instruccion -> imprimir_instr .)
    CHAR            reduce using rule 5 (instruccion -> imprimir_instr .)
    VOID            reduce using rule 5 (instruccion -> imprimir_instr .)
    $end            reduce using rule 5 (instruccion -> imprimir_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    PRINT           reduce using rule 6 (instruccion -> asignacion_instr .)
    STRUCT          reduce using rule 6 (instruccion -> asignacion_instr .)
    INT             reduce using rule 6 (instruccion -> asignacion_instr .)
    MASMAS          reduce using rule 6 (instruccion -> asignacion_instr .)
    MENOSMENOS      reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    DOUBLE          reduce using rule 6 (instruccion -> asignacion_instr .)
    FLOAT           reduce using rule 6 (instruccion -> asignacion_instr .)
    CHAR            reduce using rule 6 (instruccion -> asignacion_instr .)
    VOID            reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> STRUCTDEF .

    PRINT           reduce using rule 7 (instruccion -> STRUCTDEF .)
    STRUCT          reduce using rule 7 (instruccion -> STRUCTDEF .)
    INT             reduce using rule 7 (instruccion -> STRUCTDEF .)
    MASMAS          reduce using rule 7 (instruccion -> STRUCTDEF .)
    MENOSMENOS      reduce using rule 7 (instruccion -> STRUCTDEF .)
    ID              reduce using rule 7 (instruccion -> STRUCTDEF .)
    DOUBLE          reduce using rule 7 (instruccion -> STRUCTDEF .)
    FLOAT           reduce using rule 7 (instruccion -> STRUCTDEF .)
    CHAR            reduce using rule 7 (instruccion -> STRUCTDEF .)
    VOID            reduce using rule 7 (instruccion -> STRUCTDEF .)
    $end            reduce using rule 7 (instruccion -> STRUCTDEF .)


state 8

    (8) instruccion -> FUNCION .

    PRINT           reduce using rule 8 (instruccion -> FUNCION .)
    STRUCT          reduce using rule 8 (instruccion -> FUNCION .)
    INT             reduce using rule 8 (instruccion -> FUNCION .)
    MASMAS          reduce using rule 8 (instruccion -> FUNCION .)
    MENOSMENOS      reduce using rule 8 (instruccion -> FUNCION .)
    ID              reduce using rule 8 (instruccion -> FUNCION .)
    DOUBLE          reduce using rule 8 (instruccion -> FUNCION .)
    FLOAT           reduce using rule 8 (instruccion -> FUNCION .)
    CHAR            reduce using rule 8 (instruccion -> FUNCION .)
    VOID            reduce using rule 8 (instruccion -> FUNCION .)
    $end            reduce using rule 8 (instruccion -> FUNCION .)


state 9

    (9) instruccion -> FUNCMAIN .

    PRINT           reduce using rule 9 (instruccion -> FUNCMAIN .)
    STRUCT          reduce using rule 9 (instruccion -> FUNCMAIN .)
    INT             reduce using rule 9 (instruccion -> FUNCMAIN .)
    MASMAS          reduce using rule 9 (instruccion -> FUNCMAIN .)
    MENOSMENOS      reduce using rule 9 (instruccion -> FUNCMAIN .)
    ID              reduce using rule 9 (instruccion -> FUNCMAIN .)
    DOUBLE          reduce using rule 9 (instruccion -> FUNCMAIN .)
    FLOAT           reduce using rule 9 (instruccion -> FUNCMAIN .)
    CHAR            reduce using rule 9 (instruccion -> FUNCMAIN .)
    VOID            reduce using rule 9 (instruccion -> FUNCMAIN .)
    $end            reduce using rule 9 (instruccion -> FUNCMAIN .)


state 10

    (10) instruccion -> INCREMENTO . PTCOMA

    PTCOMA          shift and go to state 26


state 11

    (11) instruccion -> STRUCTDECLA .

    PRINT           reduce using rule 11 (instruccion -> STRUCTDECLA .)
    STRUCT          reduce using rule 11 (instruccion -> STRUCTDECLA .)
    INT             reduce using rule 11 (instruccion -> STRUCTDECLA .)
    MASMAS          reduce using rule 11 (instruccion -> STRUCTDECLA .)
    MENOSMENOS      reduce using rule 11 (instruccion -> STRUCTDECLA .)
    ID              reduce using rule 11 (instruccion -> STRUCTDECLA .)
    DOUBLE          reduce using rule 11 (instruccion -> STRUCTDECLA .)
    FLOAT           reduce using rule 11 (instruccion -> STRUCTDECLA .)
    CHAR            reduce using rule 11 (instruccion -> STRUCTDECLA .)
    VOID            reduce using rule 11 (instruccion -> STRUCTDECLA .)
    $end            reduce using rule 11 (instruccion -> STRUCTDECLA .)


state 12

    (12) instruccion -> ASIGNA_STRUCT .

    PRINT           reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    STRUCT          reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    INT             reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    MASMAS          reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    MENOSMENOS      reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    ID              reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    DOUBLE          reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    FLOAT           reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    CHAR            reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    VOID            reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)
    $end            reduce using rule 12 (instruccion -> ASIGNA_STRUCT .)


state 13

    (19) definicion_instr -> TIPO_VAR . LISTAID PTCOMA
    (53) FUNCION -> TIPO_VAR . ID PARIZQ PARAMETROS PARDER BLOQUE
    (20) LISTAID -> . LISTAID COMA IDDECLA
    (21) LISTAID -> . IDDECLA
    (22) IDDECLA -> . IDT
    (23) IDDECLA -> . IDT IGUAL expresion_log_relacional
    (24) IDT -> . ID
    (25) IDT -> . ID LIND

    ID              shift and go to state 28

    LISTAID                        shift and go to state 27
    IDDECLA                        shift and go to state 29
    IDT                            shift and go to state 30

state 14

    (16) imprimir_instr -> PRINT . PARIZQ LISTA_PRINT PARDER PTCOMA

    PARIZQ          shift and go to state 31


state 15

    (40) asignacion_instr -> IDT . TIPO_AS expresion_log_relacional PTCOMA
    (42) TIPO_AS -> . IGUAL
    (43) TIPO_AS -> . MASIGUAL
    (44) TIPO_AS -> . MENOSIGUAL
    (45) TIPO_AS -> . PORIGUAL
    (46) TIPO_AS -> . DIVIGUAL
    (47) TIPO_AS -> . RESIGUAL
    (48) TIPO_AS -> . IZQIGUAL
    (49) TIPO_AS -> . DERIGUAL
    (50) TIPO_AS -> . ANDIGUAL
    (51) TIPO_AS -> . NOTIGUAL
    (52) TIPO_AS -> . ORIGUAL

    IGUAL           shift and go to state 33
    MASIGUAL        shift and go to state 34
    MENOSIGUAL      shift and go to state 35
    PORIGUAL        shift and go to state 36
    DIVIGUAL        shift and go to state 37
    RESIGUAL        shift and go to state 38
    IZQIGUAL        shift and go to state 39
    DERIGUAL        shift and go to state 40
    ANDIGUAL        shift and go to state 41
    NOTIGUAL        shift and go to state 42
    ORIGUAL         shift and go to state 43

    TIPO_AS                        shift and go to state 32

state 16

    (30) STRUCTDEF -> STRUCT . ID LLAVIZQ IDSTRUCT LLAVDER PTCOMA
    (34) STRUCTDECLA -> STRUCT . ID ID PTCOMA

    ID              shift and go to state 44


state 17

    (127) INCREMENTO -> ID . MASMAS
    (128) INCREMENTO -> ID . MENOSMENOS
    (41) ASIGNA_STRUCT -> ID . PUNTO ID IGUAL expresion_log_relacional PTCOMA
    (24) IDT -> ID .
    (25) IDT -> ID . LIND
    (26) LIND -> . LIND IND
    (27) LIND -> . IND
    (28) IND -> . CORIZQ CORDER
    (29) IND -> . CORIZQ expresion_log_relacional CORDER

    MASMAS          shift and go to state 45
    MENOSMENOS      shift and go to state 46
    PUNTO           shift and go to state 47
    IGUAL           reduce using rule 24 (IDT -> ID .)
    MASIGUAL        reduce using rule 24 (IDT -> ID .)
    MENOSIGUAL      reduce using rule 24 (IDT -> ID .)
    PORIGUAL        reduce using rule 24 (IDT -> ID .)
    DIVIGUAL        reduce using rule 24 (IDT -> ID .)
    RESIGUAL        reduce using rule 24 (IDT -> ID .)
    IZQIGUAL        reduce using rule 24 (IDT -> ID .)
    DERIGUAL        reduce using rule 24 (IDT -> ID .)
    ANDIGUAL        reduce using rule 24 (IDT -> ID .)
    NOTIGUAL        reduce using rule 24 (IDT -> ID .)
    ORIGUAL         reduce using rule 24 (IDT -> ID .)
    CORIZQ          shift and go to state 50

    LIND                           shift and go to state 48
    IND                            shift and go to state 49

state 18

    (13) FUNCMAIN -> INT . MAIN PARIZQ PARDER BLOQUE
    (35) TIPO_VAR -> INT .

    MAIN            shift and go to state 51
    ID              reduce using rule 35 (TIPO_VAR -> INT .)


state 19

    (125) INCREMENTO -> MASMAS . ID

    ID              shift and go to state 52


state 20

    (126) INCREMENTO -> MENOSMENOS . ID

    ID              shift and go to state 53


state 21

    (36) TIPO_VAR -> DOUBLE .

    ID              reduce using rule 36 (TIPO_VAR -> DOUBLE .)


state 22

    (37) TIPO_VAR -> FLOAT .

    ID              reduce using rule 37 (TIPO_VAR -> FLOAT .)


state 23

    (38) TIPO_VAR -> CHAR .

    ID              reduce using rule 38 (TIPO_VAR -> CHAR .)


state 24

    (39) TIPO_VAR -> VOID .

    ID              reduce using rule 39 (TIPO_VAR -> VOID .)


state 25

    (2) instrucciones -> instrucciones instruccion .

    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    STRUCT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INT             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MASMAS          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MENOSMENOS      reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DOUBLE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FLOAT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
